--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Wharareyouupto2</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="todolist">todolist</string>
+    <string name="todocalendar">todocalendar</string>
+    <string name="donelist">donelist</string>
 </resources>
